--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "babel-preset-es2015": "^6.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d lib"
+    "test": "npm run build && echo '' && node dist/app.js",
+    "build": "babel src -d dist"
   },
   "author": "",
   "license": "ISC"
