--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.10.1",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0"
   },
